# shopping-list-bot-dc

./: Cargo.toml  README.md
src/: main.rs
