[package]
name = "shopping_bot"
version = "0.1.0"
authors = ["Kacper"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "*", features = ["full"] }
serde = "*" 
chrono = "*"
serde_json = "*"
[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "cache",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]
version = "0.9.0-rc.0"